trunk/Archive2/c2/8bc2618f74eb5a/output
main.cpp: In function 'int main()':
main.cpp:41:8: error: cannot bind 'X' lvalue to 'X&&'
   foo(x);
        ^
main.cpp:31:6: error: in passing argument 1 of 'void foo(X&&)'
 void foo(X&&)
      ^
